--- a/package.json
+++ b/package.json
@@ -4,14 +4,30 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "avataaars": "^1.2.1",
+    "classnames": "^2.2.6",
+    "emailjs-com": "^2.6.4",
+    "gsp": "^0.5.4",
+    "intersection-observer": "^0.12.0",
+    "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.1",
+    "react-intersection-observer": "^8.31.0",
+    "react-on-visible": "^1.6.0",
+    "react-parallax": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll-parallax": "^2.3.5",
+    "react-scrollmagic": "^2.2.0",
+    "react-slick": "^0.27.13",
+    "react-typed": "^1.2.0",
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
