portfolio projects added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
     "cSpell.ignoreWords": [
         "avataaars",
+        "jiang",
         "jpg",
         "linkedin",
         "miguel",
+        "moda",
         "n",
         "padri",
         "padriñán",
         "pexels",
+        "youwu",
         "á"
     ]
 }
