--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,63 @@
 {
     "cSpell.ignoreWords": [
+        "accusamus",
+        "adipisci",
+        "adipiscing",
+        "adipisicing",
+        "aliqua",
+        "aliquid",
+        "amet",
+        "animi",
+        "aperiam",
+        "asperiores",
+        "at",
         "avataaars",
+        "beatae",
+        "component",
+        "consectetur",
+        "dicta",
+        "do",
+        "dolor",
+        "dolore",
+        "doloremagna",
+        "eaque",
+        "eiusmod",
+        "elit",
+        "esse",
+        "et",
+        "home",
+        "homenew",
+        "incididunt",
+        "ipsum",
+        "iusto",
         "jiang",
         "jpg",
+        "labore",
         "linkedin",
+        "lorem",
         "miguel",
         "moda",
         "n",
+        "nemo",
+        "neque",
+        "new",
+        "numquam",
         "padri",
         "padriñán",
+        "path",
+        "perspiciatis",
         "pexels",
+        "quasi",
+        "repudiandae",
+        "route",
+        "sed",
+        "sit",
+        "tempor",
+        "testhome",
+        "ut",
+        "veritatis",
+        "voluptatem",
+        "voluptatibus",
         "youwu",
         "á"
     ]
