--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
     "react-on-visible": "^1.6.0",
     "react-parallax": "^3.1.2",
