--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-icons-kit": "^1.3.1",
     "react-intersection-observer": "^8.31.0",
     "react-on-visible": "^1.6.0",
     "react-parallax": "^3.1.2",
