--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-on-visible": "^1.6.0",
     "react-parallax": "^3.1.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.1",
     "react-scroll-parallax": "^2.3.5",
     "react-scrollmagic": "^2.2.0",
