changed background color for About Me & Skills sections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "entypo",
         "esse",
         "et",
+        "hola",
         "home",
         "homenew",
         "incididunt",
@@ -34,6 +35,7 @@
         "jiang",
         "jpg",
         "labore",
+        "leds",
         "linkedin",
         "lorem",
         "miguel",
