added individual skills to progress bars

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,9 @@
         "voluptatibus",
         "youwu",
         "á"
+    ],
+    "cSpell.words": [
+        "mern",
+        "photoshop"
     ]
 }
