--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scroll-parallax": "^2.4.0",
     "react-scrollmagic": "^2.3.0",
     "react-slick": "^0.27.14",
+    "react-transition-group": "^4.4.1",
     "react-typed": "^1.2.0",
     "styled-components": "^5.2.3",
     "tailwindcss": "^2.1.2",
